# record

./: Cargo.toml  README.md
src/: lib.rs  main.rs  structure.rs  util.rs
src/commands/: add.rs  clear.rs  delete.rs  mod.rs  modify.rs  view.rs
src/fs/: initial_config_file.rs  mod.rs
