[package]
name = "record"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.5.2", features = ["std", "alloc"]}
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["derive"] }
hex-literal = "0.3.4"
prettytable-rs = "0.9.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sha-1 = "0.10.0"
